@@ -1,0 +1,5 @@
+Triaxial power-law-density potential
+====================================
+
+.. autoclass:: galpy.potential.PowerTriaxialPotential
+   :members: __init__
