@@ -55,6 +55,9 @@ v1.7 (XXXX-XX-XX)
   stratified on triaxial ellipsoids (Emsellem et al. 1994). Useful for
   implementing multi-Gaussian expansions of galactic potentials.
 
+- Added PowerTriaxialPotential, the potential of a triaxial power-law
+  density (like PowerSphericalPotential, but triaxial).
+
 - Added AnyAxisymmetricRazorThinDiskPotential, the potential of an
   arbitrary razor-thin, axisymmetric disk.
 
